<resources>
    <string name="app_name">@string/pelicula</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clasificacion">Clasificación</string>
    <string name="genero">Género</string>
    <string name="idioma">Idioma</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="pelicula">Película</string>
</resources>